--- a/styles/Layout_main/Header_Main.module.css
+++ b/styles/Layout_main/Header_Main.module.css
@@ -1,24 +1,28 @@
 .container{
     width: 100%;
     max-width: 1024px;
-    margin: 20px 0 100px 0px;
+    margin: 20px 0 92px 0px;
 }
+
 .header{
     background-color: var(--main-backgroud-color);
     color: white;
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
 .headerList{
     display: flex;
     gap: 40px;
 }
+
 .headerListItem{
     display: flex;
     align-items: center;
     gap:10px;
 }
+
 .headerListItem.active{
     border: 1px solid white;
     padding: 10px;
@@ -28,7 +32,94 @@
 .headerDesc{
     margin: 20px 0px;
 }
+
 .headerBtn{
-    background-color: #0071c2;
+    background-color: var(--main-button-background-color);
     color: white;
+    font-weight: 500;
+    padding: 10px 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    user-select: none;
+}
+.headerBtn:hover{
+    opacity: 0.9;
+}
+
+.headerSearch{
+    height: 30px;
+    background-color: white;
+    border: 3px solid #febb02;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 26px 0px;
+    border-radius: 5px;
+    position: absolute;
+    bottom:-28px;
+    width: 100%;
+    max-width: 1024px;
+}
+
+.headerSearchItem{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+}
+
+.headerIcon{
+    color: lightgray;
+}
+
+.headerSearchInput{
+    border: none;
+    outline: none;
+
+}
+
+.headerSearchText{
+    color: lightgray;
+}
+
+.date{
+    position: absolute;
+    top: 52px;
+    border-radius: 20px;
+}
+
+.options{
+    position: absolute;
+    top: 50px;
+    background-color: white;
+    color: gray;
+    border-radius: 4px;
+    -webkit-box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
+}
+
+.optionItem{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+.optionCounter{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    user-select: none;
+}
+
+.optionCounterButton{
+    width: 30px;
+    height: 30px;
+    border: 1px solid var(--main-button-background-color);
+    color: #0071c2;
+    cursor: pointer;
+    background-color: white;
+}
+.optionCounterButton:hover{
+    cursor: not-allowed;
 }
