--- a/styles/Layout_main/NavBar_Main.module.css
+++ b/styles/Layout_main/NavBar_Main.module.css
@@ -1,5 +1,5 @@
 .navBar{
-    height: 50px;
+    height: 60px;
     background-color: var(--main-backgroud-color);
     display: flex;
     justify-content: center;
@@ -20,4 +20,8 @@
     margin-left:20px;
     border:none;
     padding: 5px 10px;
+    background-color: #ccc;
+    border-radius: 4px;
+    color: rgb(9, 9, 9);
+    user-select: none;
 }
