--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,7 @@ html{
     font-family: Arial, Helvetica, sans-serif;
     user-select: none;
 }
+.root_container{
+    width: 1024px;
+    margin: 0 auto;
+}
