--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,14 @@ html{
     width: 1024px;
     margin: 0 auto;
 }
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-thumb{
+    border-radius: 5px;
+    background: rgb(196, 196, 196);
+}
+::-webkit-scrollbar-track{
+    background: rgb(219, 218, 218);
+   
+}
