--- a/styles/Layout_main/Header_Main.module.css
+++ b/styles/Layout_main/Header_Main.module.css
@@ -45,11 +45,14 @@
     cursor: pointer;
     border-radius: 4px;
     user-select: none;
+    transition-duration: 200ms;
 }
 .headerBtn:hover{
     opacity: 0.9;
 }
-
+.headerBtn:active{
+    transform: scale(0.9);
+}
 .headerSearch{
     height: 30px;
     background-color: white;
